--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,8 +1,8 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+// WXCheck logo brand color: #336600
+$kaldi-red: #336600
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
